temporary fix for label-arrow gap
Former-commit-id: 7e9476b4a1dfc5bfc1486f93518296fc15ee172f

--- a/webapp/src/main/css/links.css
+++ b/webapp/src/main/css/links.css
@@ -37,4 +37,5 @@
     border-bottom: 11px solid transparent;
     border-left: 11px solid #097ea1;
     float:right;
+    left:-1px;
 }
